--- a/exchangeSort.html
+++ b/exchangeSort.html
@@ -26,11 +26,11 @@
         }
 
         .bar.current {
-            background-color: #ec00fc;
+            background-color: yellow;
         }
 
         .bar.comparing {
-            background-color: #fc1900;
+            background-color: red;
         }
     </style>
 </head>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="container bg-white py-2 py-lg-4 pt-sm-0 pb-sm-5">
-        <h2 class="mb-4 text-center">Exchange Sort </h2>
+        <h2 class="mb-3 text-center">Exchange Sort </h2>
         <div class="row">
             <div class="form-group col-md-3">
                 <label for="array-size">Array Size:</label>
@@ -72,11 +72,24 @@
                 <button id="set-elements-button" class="btn btn-primary mt-2">Set Elements</button>
             </div>
         </div>
-        <div id="array-container" class="mb-b"></div>
+        <div id="array-container" class="mb-3"></div>
         <div class="row justify-content-center">
             <button id="sort-button" class="btn px-3 py-2 rounded-1 btn-success">Start Sorting</button>
             <button id="download-button" class="btn btn-info ml-2">Download</button>
-
+        </div>
+        <div class="legend row px-5 py-1 pb-0">
+            <div class="d-md-flex px-1">
+                <div class="legend-box" style="background-color: red;"></div>
+                <div class="legend-text">Current</div>
+            </div>
+            <div class="d-md-flex px-1">
+                <div class="legend-box" style="background-color: yellow;"></div>
+                <div class="legend-text">Comparing</div>
+            </div>
+            <div class="d-md-flex px-1">
+                <div class="legend-box" style="background-color: #2ecc71;"></div>
+                <div class="legend-text">Sorted</div>
+            </div>
         </div>
     </div>
 
