--- a/shellSort.html
+++ b/shellSort.html
@@ -8,6 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
+
     <style>
         .bar {
             width: 30px;
@@ -22,15 +23,15 @@
         }
 
         .bar.sorted {
-            background-color: #3ce281;
+            background-color: #2ecc71;
         }
 
         .bar.current {
-            background-color: #ff00a6;
+            background-color: red;
         }
 
         .bar.comparing {
-            background-color: #ff1900;
+            background-color: yellow;
         }
     </style>
 </head>
@@ -49,12 +50,12 @@
         <a href="heapSort.html">Heap Sort</a>
         <a href="radixSort.html">Radix Sort</a>
         <a href="shellSort.html">Shell Sort</a>
-        <a href="exchangeSort.html">Shell Sort</a>
+        <a href="exchangeSort.html">Exchange Sort</a>
 
     </div>
 
     <div class="container bg-white py-4">
-        <h2 class="mb-4 text-center">Shell Sort</h2>
+        <h2 class="mb-3 text-center">Shell Sort</h2>
         <div class="row">
             <div class="form-group col-md-3">
                 <label for="array-size">Array Size:</label>
@@ -73,12 +74,27 @@
                 <button id="set-elements-button" class="btn btn-primary mt-2">Set Elements</button>
             </div>
         </div>
-        <div id="array-container" class="mb-4"></div>
+        <div id="array-container" class="mb-3"></div>
         <div class="row justify-content-center">
             <button id="sort-button" class="btn px-3 py-2 rounded-1 btn-success">Start Sorting</button>
             <button id="download-button" class="btn btn-info ml-2">Download</button>
-
         </div>
+
+        <div class="legend row px-5 py-1 pb-0">
+            <div class="d-md-flex px-1">
+                <div class="legend-box" style="background-color: red;"></div>
+                <div class="legend-text">Current</div>
+            </div>
+            <div class="d-md-flex px-1">
+                <div class="legend-box" style="background-color: yellow;"></div>
+                <div class="legend-text">Comparing</div>
+            </div>
+            <div class="d-md-flex px-1">
+                <div class="legend-box" style="background-color: #2ecc71;"></div>
+                <div class="legend-text">Sorted</div>
+            </div>
+        </div>
+
     </div>
 
     <script src="shellSort.js"></script>
