--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting Algorithms Home</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@300;600&display=swap"
+        rel="stylesheet">
     <style>
         body {
             font-family: 'Open Sans', sans-serif;
             margin: 0;
             padding: 0;
             color: #ffffff;
+        }
+
+        body::-webkit-scrollbar {
+            display: none;
         }
 
         .header {
@@ -111,7 +116,8 @@
     <header class="header sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">Sorting Algorithms</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -138,7 +144,8 @@
         <div class="hero-content">
             <h2 id="hero-title">Explore Sorting Algorithms</h2>
             <p id="hero-subtitle">Visualize and understand various sorting algorithms with interactive demos.</p>
-            <a href="bubbleSortwithVisualization.html" class="hero-button text-decoration-none bg-info text-white">Explore Now</a>
+            <a href="bubbleSortwithVisualization.html"
+                class="hero-button text-decoration-none bg-info text-white">Explore Now</a>
         </div>
     </section>
 
