--- a/html/algorithms/selectionSort.html
+++ b/html/algorithms/selectionSort.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exchange Sort Visualization</title>
+    <title>Selection Sort Visualization</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/main.css">
     <style>
         .bar {
             width: 30px;
@@ -16,7 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: flex-end;
-            color: rgb(17, 15, 15);
+            color: rgb(15, 14, 14);
             font-weight: bold;
             transition: background-color 0.3s;
         }
@@ -26,34 +27,34 @@
         }
 
         .bar.current {
-            background-color: yellow;
+            background-color: #f39c12;
         }
 
         .bar.comparing {
-            background-color: red;
+            background-color: #e74c3c;
         }
     </style>
 </head>
 
+
 <body>
-    <input type="button" value="" id="menubtn" class="menu-open-btn btn bg-transparent rounded-0 btn-outline-none">
+    <input type="button" value="" id="menubtn" class="menu-open-btn rounded-0 outline-0 btn bg-transparent">
 
     <div id="menu" class="menu">
         <a href="javascript:void(0)" class="close-btn">&times;</a>
         <h5 class="h5 text-left text-dark px-1 py-2">Sorting Algorithms</h5>
-        <a href="bubbleSortwithVisualization.html">Bubble Sort</a>
-        <a href="selectionSort.html">Selection Sort</a>
-        <a href="insertionSort.html">Insertion Sort</a>
-        <a href="mergeSort.html">Merge Sort</a>
-        <a href="quickSort.html">Quick Sort</a>
-        <a href="heapSort.html">Heap Sort</a>
-        <a href="radixSort.html">Radix Sort</a>
-        <a href="shellSort.html">Shell Sort</a>
-        <a href="exchangeSort.html">Exchange Sort</a>
+        <a href="../algorithms/bubbleSort.html">Bubble Sort</a>
+        <a href="../algorithms/selectionSort.html">Selection Sort</a>
+        <a href="../algorithms/insertionSort.html">Insertion Sort</a>
+        <a href="../algorithms/mergeSort.html">Merge Sort</a>
+        <a href="../algorithms/quickSort.html">Quick Sort</a>
+        <a href="../algorithms/heapSort.html">Heap Sort</a>
+        <a href="../algorithms/radixSort.html">Radix Sort</a>
+        <a href="../algorithms/shellSort.html">Shell Sort</a>
+        <a href="../algorithms/exchangeSort.html">Exchange Sort</a>
     </div>
-
-    <div class="container bg-white py-2 py-lg-4 pt-sm-0 pb-sm-5">
-        <h2 class="mb-3 text-center">Exchange Sort </h2>
+    <div class="container bg-white py-4">
+        <h2 class="mb-3 text-center">Selection Sort</h2>
         <div class="row">
             <div class="form-group col-md-3">
                 <label for="array-size">Array Size:</label>
@@ -93,8 +94,8 @@
         </div>
     </div>
 
-    <script src="exchangeSort.js"></script>
-    <script src="menu.js"></script>
+    <script src="../../js/algorithms/selectionSort.js"></script>
+    <script src="../../js/scripts/menu.js"></script>
 </body>
 
 </html>
