--- a/html/algorithms/shellSort.html
+++ b/html/algorithms/shellSort.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radix Sort Visualization</title>
-    
+    <title>Shell Sort Visualization</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/main.css">
+
     <style>
         .bar {
             width: 30px;
@@ -17,7 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: flex-end;
-            color: rgb(0, 0, 0);
+            color: rgb(28, 25, 25);
             font-weight: bold;
             transition: background-color 0.3s;
         }
@@ -26,11 +26,12 @@
             background-color: #2ecc71;
         }
 
+        .bar.current {
+            background-color: red;
+        }
+
         .bar.comparing {
             background-color: yellow;
-        }
-        .bar.current{
-            background-color: red;
         }
     </style>
 </head>
@@ -41,19 +42,20 @@
     <div id="menu" class="menu">
         <a href="javascript:void(0)" class="close-btn">&times;</a>
         <h5 class="h5 text-left text-dark px-1 py-2">Sorting Algorithms</h5>
-        <a href="bubbleSortwithVisualization.html">Bubble Sort</a>
-        <a href="selectionSort.html">Selection Sort</a>
-        <a href="insertionSort.html">Insertion Sort</a>
-        <a href="mergeSort.html">Merge Sort</a>
-        <a href="quickSort.html">Quick Sort</a>
-        <a href="heapSort.html">Heap Sort</a>
-        <a href="radixSort.html">Radix Sort</a>
-        <a href="shellSort.html">Shell Sort</a>
-        <a href="exchangeSort.html">Exchange Sort</a>
+        <a href="../algorithms/bubbleSort.html">Bubble Sort</a>
+        <a href="../algorithms/selectionSort.html">Selection Sort</a>
+        <a href="../algorithms/insertionSort.html">Insertion Sort</a>
+        <a href="../algorithms/mergeSort.html">Merge Sort</a>
+        <a href="../algorithms/quickSort.html">Quick Sort</a>
+        <a href="../algorithms/heapSort.html">Heap Sort</a>
+        <a href="../algorithms/radixSort.html">Radix Sort</a>
+        <a href="../algorithms/shellSort.html">Shell Sort</a>
+        <a href="../algorithms/exchangeSort.html">Exchange Sort</a>
+
     </div>
 
     <div class="container bg-white py-4">
-        <h2 class="mb-3 text-center">Radix Sort</h2>
+        <h2 class="mb-3 text-center">Shell Sort</h2>
         <div class="row">
             <div class="form-group col-md-3">
                 <label for="array-size">Array Size:</label>
@@ -77,6 +79,7 @@
             <button id="sort-button" class="btn px-3 py-2 rounded-1 btn-success">Start Sorting</button>
             <button id="download-button" class="btn btn-info ml-2">Download</button>
         </div>
+
         <div class="legend row px-5 py-1 pb-0">
             <div class="d-md-flex px-1">
                 <div class="legend-box" style="background-color: red;"></div>
@@ -91,10 +94,11 @@
                 <div class="legend-text">Sorted</div>
             </div>
         </div>
+
     </div>
 
-    <script src="radixSort.js"></script>
-    <script src="menu.js"></script>
+    <script src="../../js/algorithms/shellSort.js"></script>
+    <script src="../../js/scripts/menu.js"></script>
 </body>
 
 </html>
